--- a/index.html
+++ b/index.html
@@ -1,121 +1,235 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <meta name="viewport" content="width=device-width">
-    <title>HTML и CSS</title>
-    <link rel="stylesheet" href="css/styles.less"/>
-</head>
-<body>
+	<head>
+		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+		<meta name="viewport" content="width=device-width" />
+		<title>HTML и CSS</title>
+		<link rel="stylesheet" href="css/styles.less" />
+	</head>
+	<body>
+		<section class="top-section">
+			<div class="columns-wrapper">
+				<div class="top-section__content">
+					<div class="top-section__button">
+						<button class="button-link top-section-button top-section-button_city">Москва</button>
+					</div>
+					<nav class="top-section__nav">
+						<ul class="nav nav_top">
+							<li class="nav__item"><a href="#" class="nav__link">Шоурум</a></li>
+							<li class="nav__item"><a href="#" class="nav__link">Оплата</a></li>
+							<li class="nav__item"><a href="#" class="nav__link">Доставка</a></li>
+							<li class="nav__item"><a href="#" class="nav__link">Самовывоз</a></li>
+							<li class="nav__item"><a href="#" class="nav__link">Контактная информация</a></li>
+						</ul>
+					</nav>
+				</div>
+			</div>
+		</section>
 
-<header class="header">
-    <div class="columns-wrapper">
-        <div class="header__content">
-            <div class="header__logo">
-                <a href="#" class="logo-link"><img class="logo" src="css/blocks/logo/logo.svg" alt="hh.ru"/></a>
-            </div>
-            <div class="header__nav">
-                <ul class="nav">
-                    <li class="nav__item"><a href="#" class="nav__link">Одежда</a></li>
-                    <li class="nav__item"><a href="#" class="nav__link">Сумки</a></li>
-                    <li class="nav__item"><a href="#" class="nav__link">Аксессуары</a></li>
-                    <li class="nav__item"><a href="#" class="nav__link">Офисные принадлежности</a></li>
-                </ul>
-            </div>
-            <div class="header__fill"></div>
-            <div class="header__button">
-                <button class="header-button-icon header-button-icon_search">Поиск</button>
-            </div>
-            <div class="header__button">
-                <button class="header-button-icon header-button-icon_login">Войти</button>
-                <button class="header-button header-button_login">Войти</button>
-            </div>
-            <div class="header__button header__button_menu">
-                <button class="header-button-icon header-button-icon_menu">Меню</button>
-            </div>
-        </div>
-    </div>
-</header>
+		<header class="header">
+			<div class="columns-wrapper">
+				<div class="header__content">
+					<div class="header__logo">
+						<a href="#" class="logo-link"><img class="logo" src="css/blocks/logo/logo-red.svg" alt="hh.ru"/></a>
+					</div>
+					<div class="header__nav">
+						<ul class="nav">
+							<li class="nav__item"><a href="#" class="nav__link">Одежда</a></li>
+							<li class="nav__item"><a href="#" class="nav__link">Сумки</a></li>
+							<li class="nav__item"><a href="#" class="nav__link">Аксессуары</a></li>
+							<li class="nav__item"><a href="#" class="nav__link">Офисные принадлежности</a></li>
+						</ul>
+					</div>
+					<div class="header__fill"></div>
+					<div class="header__button">
+						<button class="header-button-icon header-button-icon_search">Поиск</button>
+					</div>
+					<div class="header__button">
+						<button class="header-button-icon header-button-icon_login">Войти</button>
+						<button class="header-button header-button_login">Войти</button>
+					</div>
+					<div class="header__button header__button_menu">
+						<button class="header-button-icon header-button-icon_menu">Меню</button>
+					</div>
+				</div>
+			</div>
+		</header>
 
+		<section class="carousel-section">
+			<div class="columns-wrapper">
+				<div class="carousel-card" data-card="1">
+					<div class="carousel-card__descr">
+						<h1 class="heading carousel-card__descr-title">Мужская и&nbsp;женская одежда с&nbsp;символикой HeadHunter</h1>
+						<button class="button carousel-card__descr-button">Перейти в&nbsp;каталог</button>
+					</div>
+					<div class="carousel-card__image-container">
+						<img class="carousel-card__image" src="images/carousel-product-1.png" alt="Мужская и женская одежда" />
+					</div>
+				</div>
+				<div class="carousel-card" data-card="2">
+					<div class="carousel-card__descr">
+						<h1 class="heading carousel-card__descr-title">Офисные принадлежности с&nbsp;символикой HeadHunter</h1>
+						<button class="button carousel-card__descr-button">Перейти в&nbsp;каталог</button>
+					</div>
+					<div class="carousel-card__image-container">
+						<img class="carousel-card__image" src="images/carousel-product-2.png" alt="Мужская и женская одежда" />
+					</div>
+				</div>
+				<div class="carousel-dots">
+					<ul class="carousel-dots__list">
+						<li class="carousel-dots__item carousel-dots__item_active"></li>
+						<li class="carousel-dots__item"></li>
+						<li class="carousel-dots__item"></li>
+						<li class="carousel-dots__item"></li>
+						<li class="carousel-dots__item"></li>
+					</ul>
+				</div>
+			</div>
+		</section>
 
-<section class="content-section">
-    <div class="columns-wrapper">
-        <h2 class="heading heading_level-2">Популярные товары</h2>
-        <div class="columns-row">
-            <div class="column column_s-1 column_m-2 column_l-4">
-                <div class="product-card">
-                    <div class="product-card__image-container">
-                        <img class="product-card__image" src="images/product-1.jpg" alt="Зонт"/>
-                    </div>
-                    <div class="product-card__name">Зонт</div>
-                    <div class="product-card__price">
-                        1&nbsp;990 ₽
-                    </div>
-                </div>
-            </div>
-            <div class="column column_s-1 column_m-2 column_l-4">
-                <div class="product-card">
-                    <div class="product-card__image-container">
-                        <img class="product-card__image" src="images/product-2.jpg" alt="Сумка"/>
-                    </div>
-                    <div class="product-card__name">Сумка</div>
-                    <div class="product-card__price">
-                        290 ₽
-                    </div>
-                </div>
-            </div>
-            <div class="column column_s-1 column_m-2 column_l-4">
-                <div class="product-card">
-                    <div class="product-card__image-container">
-                        <img class="product-card__image" src="images/product-3.jpg" alt="Шлепанцы"/>
-                    </div>
-                    <div class="product-card__name">Шлепанцы</div>
-                    <div class="product-card__price">
-                        790 ₽
-                    </div>
-                </div>
-            </div>
-            <div class="column column_s-1 column_m-2 column_l-4">
-                <div class="product-card">
-                    <div class="product-card__image-container">
-                        <img class="product-card__image" src="images/product-4.jpg" alt="Футболка"/>
-                        <div class="product-card__sale">sale</div>
-                    </div>
-                    <div class="product-card__name">Футболка</div>
-                    <div class="product-card__price">
-                        <span class="product-card__old-price">690</span>
-                        390 ₽
-                    </div>
-                </div>
-            </div>
-            <div class="column column_s-1 column_m-2 column_l-4">
-                <div class="product-card">
-                    <div class="product-card__image-container">
-                        <img class="product-card__image" src="images/product-5.jpg" alt="Толстовка"/>
-                    </div>
-                    <div class="product-card__name">Толстовка</div>
-                    <div class="product-card__price">
-                        3 990 ₽
-                    </div>
-                </div>
-            </div>
-            <div class="column column_s-1 column_m-2 column_l-4">
-                <div class="product-card">
-                    <div class="product-card__image-container">
-                        <img class="product-card__image" src="images/product-6.jpg" alt="Подушка"/>
-                    </div>
-                    <div class="product-card__name">Подушка</div>
-                    <div class="product-card__price">
-                        990 ₽
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
+		<section class="content-section">
+			<div class="columns-wrapper">
+				<h2 class="heading heading_level-2">Популярные товары</h2>
+				<div class="columns-row">
+					<div class="column column_s-1 column_m-2 column_l-4">
+						<div class="product-card">
+							<div class="product-card__image-container">
+								<img class="product-card__image" src="images/product-1.jpg" alt="Зонт" />
+							</div>
+							<div class="product-card__name">Зонт</div>
+							<div class="product-card__price">
+								1&nbsp;990 ₽
+							</div>
+						</div>
+					</div>
+					<div class="column column_s-1 column_m-2 column_l-4">
+						<div class="product-card">
+							<div class="product-card__image-container">
+								<img class="product-card__image" src="images/product-2.jpg" alt="Сумка" />
+							</div>
+							<div class="product-card__name">Сумка</div>
+							<div class="product-card__price">
+								290 ₽
+							</div>
+						</div>
+					</div>
+					<div class="column column_s-1 column_m-2 column_l-4">
+						<div class="product-card">
+							<div class="product-card__image-container">
+								<img class="product-card__image" src="images/product-3.jpg" alt="Шлепанцы" />
+							</div>
+							<div class="product-card__name">Шлепанцы</div>
+							<div class="product-card__price">
+								790 ₽
+							</div>
+						</div>
+					</div>
+					<div class="column column_s-1 column_m-2 column_l-4">
+						<div class="product-card">
+							<div class="product-card__image-container">
+								<img class="product-card__image" src="images/product-4.jpg" alt="Футболка" />
+								<div class="product-card__sale">sale</div>
+							</div>
+							<div class="product-card__name">Футболка</div>
+							<div class="product-card__price">
+								<span class="product-card__old-price">690</span>
+								390 ₽
+							</div>
+						</div>
+					</div>
+					<div class="column column_s-1 column_m-2 column_l-4">
+						<div class="product-card">
+							<div class="product-card__image-container">
+								<img class="product-card__image" src="images/product-5.jpg" alt="Толстовка" />
+							</div>
+							<div class="product-card__name">Толстовка</div>
+							<div class="product-card__price">
+								3 990 ₽
+							</div>
+						</div>
+					</div>
+					<div class="column column_s-1 column_m-2 column_l-4">
+						<div class="product-card">
+							<div class="product-card__image-container">
+								<img class="product-card__image" src="images/product-6.jpg" alt="Подушка" />
+							</div>
+							<div class="product-card__name">Подушка</div>
+							<div class="product-card__price">
+								990 ₽
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
 
+		<section class="triggers-section">
+			<div class="columns-wrapper">
+				<div class="columns-row">
+					<div class="column column_s-2 column_m-2 column_l-4">
+						<div class="triggers-item">
+							<div class="triggers-item__image">
+								<img src="css/blocks/triggers-section/icon-delivery.svg" alt="Доставка" class="logo logo_trigger" />
+							</div>
+							<div class="triggers-item__text">Быстрая доставка по&nbsp;всей России</div>
+						</div>
+					</div>
+					<div class="column column_s-2 column_m-2 column_l-4">
+						<div class="triggers-item">
+							<div class="triggers-item__image">
+								<img src="css/blocks/triggers-section/icon-return.svg" alt="Возврат" class="logo logo_trigger" />
+							</div>
+							<div class="triggers-item__text">100% гарантия возврата и&nbsp;подлинность товара</div>
+						</div>
+					</div>
+					<div class="column column_s-2 column_m-2 column_l-4">
+						<div class="triggers-item triggers-item_last">
+							<div class="triggers-item__image">
+								<img src="css/blocks/triggers-section/icon-support.svg" alt="Поддержка" class="logo logo_trigger" />
+							</div>
+							<div class="triggers-item__text">Круглосуточная служба поддержки</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
 
+		<footer class="footer">
+			<div class="columns-wrapper">
+				<div class="footer-links">
+					<div class="columns-row">
+						<div class="column column_s-2 column_m-3 column_l-4">
+							<div class="social">
+								<a href="#" class="social-link"><img src="css/blocks/social/icon-fb.svg" alt="Facebook"/></a>
+								<a href="#" class="social-link"><img src="css/blocks/social/icon-tw.svg" alt="Twitter"/></a>
+								<a href="#" class="social-link"><img src="css/blocks/social/icon-vk.svg" alt="Vkontakte"/></a>
+								<a href="#" class="social-link"><img src="css/blocks/social/icon-inst.svg" alt="Instagram"/></a>
+							</div>
+						</div>
+						<div class="column column_s-2 column_m-3 column_l-4">
+							<div class="apps">
+								<a href="#" class="apps-link"><img src="css/blocks/apps/icon-appstore.svg" alt="App Store"/></a>
+								<a href="#" class="apps-link"><img src="css/blocks/apps/icon-googleplay.svg" alt="Google Play"/></a>
+							</div>
+						</div>
+						<div class="column column_l-4 d-none d-block_m">
+							<div class="footer__logo">
+									<a href="#" class="logo-link"><img class="logo logo_footer" src="css/blocks/logo/logo-grey.svg" alt="hh.ru"/></a>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="footer-info">
+					<div class="columns-row">
+						<div class="column column_s-2 column_m-6 column_l-12">
+							<div class="footer-info__copyright">&copy;&nbsp;2019 Группа компаний HeadHunter</div>
+							<div class="footer-info__statistic">Сегодня на&nbsp;сайте 684&nbsp;978&nbsp;вакансий, 34&nbsp;789&nbsp;747&nbsp;резюме, 858&nbsp;923&nbsp;компании и&nbsp;за&nbsp;неделю 1&nbsp;211&nbsp;363&nbsp;приглашения</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</footer>
 
-<script src="js/index.js"></script>
-</body>
+		<script src="js/index.js"></script>
+	</body>
 </html>
