form-order, приглаживание стилей

--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<meta name="viewport" content="width=device-width" />
+
+		<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+		<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+		<meta name="theme-color" content="#ffffff" />
+
 		<title>HTML и CSS</title>
 		<link rel="stylesheet" href="css/styles.less" />
 	</head>
@@ -14,12 +19,12 @@
 						<button class="button-link top-section-button top-section-button_city">Москва</button>
 					</div>
 					<nav class="top-section__nav">
-						<ul class="nav nav_top">
-							<li class="nav__item"><a href="#" class="nav__link">Шоурум</a></li>
-							<li class="nav__item"><a href="#" class="nav__link">Оплата</a></li>
-							<li class="nav__item"><a href="#" class="nav__link">Доставка</a></li>
-							<li class="nav__item"><a href="#" class="nav__link">Самовывоз</a></li>
-							<li class="nav__item"><a href="#" class="nav__link">Контактная информация</a></li>
+						<ul class="nav top-section-nav">
+							<li class="nav__item top-section-nav__item"><a href="#" class="nav__link top-section-nav__link">Шоурум</a></li>
+							<li class="nav__item top-section-nav__item"><a href="#" class="nav__link top-section-nav__link">Оплата</a></li>
+							<li class="nav__item top-section-nav__item"><a href="#" class="nav__link top-section-nav__link">Доставка</a></li>
+							<li class="nav__item top-section-nav__item"><a href="#" class="nav__link top-section-nav__link">Самовывоз</a></li>
+							<li class="nav__item top-section-nav__item"><a href="#" class="nav__link top-section-nav__link">Контактная информация</a></li>
 						</ul>
 					</nav>
 				</div>
@@ -200,21 +205,21 @@
 					<div class="columns-row">
 						<div class="column column_s-2 column_m-3 column_l-4">
 							<div class="social">
-								<a href="#" class="social-link"><img src="css/blocks/social/icon-fb.svg" alt="Facebook"/></a>
-								<a href="#" class="social-link"><img src="css/blocks/social/icon-tw.svg" alt="Twitter"/></a>
-								<a href="#" class="social-link"><img src="css/blocks/social/icon-vk.svg" alt="Vkontakte"/></a>
-								<a href="#" class="social-link"><img src="css/blocks/social/icon-inst.svg" alt="Instagram"/></a>
+								<a href="#" class="social__link" target="_blank"><img src="css/blocks/social/icon-fb.svg" alt="Facebook"/></a>
+								<a href="#" class="social__link" target="_blank"><img src="css/blocks/social/icon-tw.svg" alt="Twitter"/></a>
+								<a href="#" class="social__link" target="_blank"><img src="css/blocks/social/icon-vk.svg" alt="Vkontakte"/></a>
+								<a href="#" class="social__link" target="_blank"><img src="css/blocks/social/icon-inst.svg" alt="Instagram"/></a>
 							</div>
 						</div>
 						<div class="column column_s-2 column_m-3 column_l-4">
 							<div class="apps">
-								<a href="#" class="apps-link"><img src="css/blocks/apps/icon-appstore.svg" alt="App Store"/></a>
-								<a href="#" class="apps-link"><img src="css/blocks/apps/icon-googleplay.svg" alt="Google Play"/></a>
+								<a href="#" class="apps__link" target="_blank"><img src="css/blocks/apps/icon-appstore.svg" alt="App Store"/></a>
+								<a href="#" class="apps__link" target="_blank"><img src="css/blocks/apps/icon-googleplay.svg" alt="Google Play"/></a>
 							</div>
 						</div>
 						<div class="column column_l-4 d-none d-block_m">
 							<div class="footer__logo">
-								<a href="#" class="logo-link"><img class="logo logo_footer" src="css/blocks/logo/logo-grey.svg" alt="hh.ru"/></a>
+								<a href="#" class="logo__link"><img class="logo logo_footer" src="css/blocks/logo/logo-grey.svg" alt="hh.ru"/></a>
 							</div>
 						</div>
 					</div>
@@ -234,92 +239,114 @@
 			<div class="columns-wrapper">
 				<div class="columns-row">
 					<div class="column column_s-2 column_m-3 column_l-7">
-						<form action="#" class="form form-order">
-							<div class="form__items">
-								<h1 class="heading form__title">Оформление заказа</h1>
-								<div class="form__block form__block_contacts">
-									<h3 class="heading heading_level-3 form__block-title">Контактное лицо</h3>
-									<div class="form__item form__item_text">
-										<input type="text" class="form__input" placeholder="ФИО" required />
+						<div class="popup-order__form">
+							<form action="#" class="form form-order">
+								<div class="form__items">
+									<div class="heading form__title">Оформление заказа</div>
+
+									<div class="form__block form__block_contacts">
+										<h3 class="heading heading_level-3 form__block-title">Контактное лицо</h3>
+										<div class="form__item form__item_text">
+											<input type="text" class="form__input" placeholder="ФИО" required />
+										</div>
+										<div class="form__item form__item_text">
+											<input type="text" class="form__input" placeholder="Электронная почта" required />
+										</div>
+										<div class="form__item form__item_text">
+											<input type="text" class="form__input form__input_phone-pre" placeholder="+7" required value="+7" />
+											<input type="text" class="form__input form__input_phone-code" placeholder="Код" required />
+											<input type="text" class="form__input form__input_phone-number" placeholder="Номер" required />
+										</div>
 									</div>
-									<div class="form__item form__item_text">
-										<input type="text" class="form__input" placeholder="Электронная почта" required />
+
+									<div class="form__block form__block_delivery">
+										<h3 class="heading heading_level-3 form__block-title">Способ получения заказа</h3>
+										<div class="form__item form__item_button">
+											<button type="button" class="button button_selection form__button">Самовывоз</button>
+											<button type="button" class="button button_selection form__button selected">Доставка</button>
+										</div>
 									</div>
-									<div class="form__item form__item_text">
-										<input type="text" class="form__input form__input_phone-pre" placeholder="+7" required />
-										<input type="text" class="form__input form__input_phone-code" placeholder="Код" required />
-										<input type="text" class="form__input form__input_phone-number" placeholder="Номер" required />
+
+									<div class="form__block form__block_address">
+										<h3 class="heading heading_level-3 form__block-title">Адрес</h3>
+										<div class="form__item form__item_select">
+											<select name="city" id="select-city" class="form__select">
+												<option disabled value="null" class="form__option" selected>Город</option>
+												<option value="0" class="form__option">Москва</option>
+												<option value="1" class="form__option">Химки</option>
+												<option value="2" class="form__option">Санкт-Петербург</option>
+											</select>
+										</div>
+										<div class="form__item form__item_textarea">
+											<textarea name="address" id="address" cols="30" rows="4" class="form__textarea" placeholder="Адрес" required></textarea>
+										</div>
 									</div>
-								</div>
-								<div class="form__block form__block_delivery">
-									<h3 class="heading heading_level-3 form__block-title">Способ получения заказа</h3>
+
+									<div class="form__block form__block_payment-type">
+										<h3 class="heading heading_level-3 form__block-title">Оплата</h3>
+										<div class="form__item form__item_radio">
+											<label for="online-pay" class="form__label form__label_radio">
+												<input type="radio" name="pay" id="online-pay" class="form__radio" value="online-pay" checked />
+												<span class="form__radio-box"></span>
+												<span class="form__radio-text">Online-оплата</span>
+											</label>
+										</div>
+										<div class="form__item form__item_radio">
+											<label for="cash-pay" class="form__label form__label_radio">
+												<input type="radio" name="pay" id="cash-pay" class="form__radio" value="cash-pay" />
+												<span class="form__radio-box"></span>
+												<span class="form__radio-text">Наличными</span>
+											</label>
+										</div>
+										<div class="form__item form__item_radio">
+											<label for="card-pay" class="form__label form__label_radio">
+												<input type="radio" name="pay" id="card-pay" class="form__radio" value="card-pay" />
+												<span class="form__radio-box"></span>
+												<span class="form__radio-text">Картой при получении</span>
+											</label>
+										</div>
+									</div>
+
+									<div class="form__block form__block_payment-type">
+										<h3 class="heading heading_level-3 form__block-title">Уведомления</h3>
+										<div class="form__item form__item_checkbox">
+											<label for="sms" class="form__label form__label_checkbox">
+												<input type="checkbox" name="sms" id="sms" class="form__checkbox" />
+												<span class="form__checkbox-box"></span>
+												<span class="form__checkbox-text">Хочу получать SMS уведомления</span>
+											</label>
+										</div>
+									</div>
+
 									<div class="form__item form__item_button">
-										<button type="button" class="button button_selection form__button">Самовывоз</button>
-										<button type="button" class="button button_selection form__button selected">Доставка</button>
+										<button type="submit" class="button form__button form__button_submit">Оформить заказ</button>
 									</div>
 								</div>
-								<div class="form__block form__block_address">
-									<h3 class="heading heading_level-3 form__block-title">Адрес</h3>
-									<div class="form__item form__item_select">
-										<select name="city" id="select-city" class="form__select">
-											<option value="0" class="form__option">Москва</option>
-											<option value="1" class="form__option">Химки</option>
-											<option value="2" class="form__option">Санкт-Петербург</option>
-										</select>
-									</div>
-									<div class="form__item form__item_textarea">
-										<textarea name="address" id="address" cols="30" rows="4" class="form__textarea" placeholder="Адрес"></textarea>
-									</div>
-								</div>
-								<div class="form__block form__block_payment-type">
-									<h3 class="heading heading_level-3 form__block-title">Оплата</h3>
-									<div class="form__item form__item_radio">
-										<label for="online-pay" class="form__label form__label_radio">
-											<input type="radio" name="online-pay" id="online-pay" class="form__radio" />
-											<span class="form__radio-box"></span>
-											<span class="form__radio-text">Online-оплата</span>
-										</label>
-									</div>
-									<div class="form__item form__item_radio">
-										<label for="cash-pay" class="form__label form__label_radio">
-											<input type="radio" name="cash-pay" id="cash-pay" class="form__radio" />
-											<span class="form__radio-box"></span>
-											<span class="form__radio-text">Наличными</span>
-										</label>
-									</div>
-									<div class="form__item form__item_radio">
-										<label for="card-pay" class="form__label form__label_radio">
-											<input type="radio" name="card-pay" id="card-pay" class="form__radio" />
-											<span class="form__radio-box"></span>
-											<span class="form__radio-text">Картой при получении</span>
-										</label>
-									</div>
-								</div>
-								<div class="form__block form__block_payment-type">
-									<h3 class="heading heading_level-3 form__block-title">Уведомления</h3>
-									<div class="form__item form__item_checkbox">
-										<label for="sms" class="form__label form__label_checkbox">
-											<input type="checkbox" name="sms" id="sms" class="form__checkbox" />
-											<span class="form__checkbox-box"></span>
-											<span class="form__checkbox-text">Хочу получать SMS уведомления</span>
-										</label>
-									</div>
-								</div>
-								<div class="form__item form__item_button">
-									<button type="submit" class="button form__button form__button_submit">Оформить заказ</button>
-								</div>
-							</div>
-						</form>
+							</form>
+						</div>
 					</div>
 					<div class="column column_l-1 d-none d-block_m"></div>
 					<div class="column column_m-3 column_l-4 d-none d-block_s">
-						<div class="product-card">
-							<div class="product-card__image-container">
-								<img class="product-card__image" src="images/product-1.jpg" alt="Зонт" />
-							</div>
-							<div class="product-card__name">Зонт</div>
-							<div class="product-card__price">
-								1&nbsp;990 ₽
+						<div class="popup-order__product">
+							<div class="product-card popup-order__card">
+								<div class="product-card__image-container">
+									<img class="product-card__image" src="images/product-4.jpg" alt="Футболка" />
+									<div class="product-card__sale">sale</div>
+								</div>
+								<div class="product-card__name">Футболка</div>
+								<div class="product-card__price">
+									<span class="product-card__old-price">690</span>
+									390 ₽
+								</div>
+								<div class="product-card__descr">Красная хлопоковая футболка с&nbsp;коротким руковом</div>
+								<div class="product-card__sizing-container">
+									<button class="button button_selection product-card__sizing-button">XS</button>
+									<button class="button button_selection product-card__sizing-button selected">S</button>
+									<button class="button button_selection product-card__sizing-button">M</button>
+									<button class="button button_selection product-card__sizing-button">L</button>
+									<button class="button button_selection product-card__sizing-button">XL</button>
+									<button class="button button_selection product-card__sizing-button">XXL</button>
+								</div>
 							</div>
 						</div>
 					</div>
